# GUI

./: .flake8  .gitignore  BUILDING.md  DEPENDENCIES.md  Dockerfile  Dockerfile.README.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_SUMMARY.md  MIGRATION.md  MIGRATION_GUIDE.md  POETRY.md  README.md  RESOURCES.md  SHELL_ANALYSIS.md  STRUCTURE.md  do_beta.sh  do_i18n.sh  do_muos_release.sh  do_release.sh  do_stable.sh  do_trimui_release.sh  do_x86_64_release.sh  pyproject.toml  requirements.txt  setup.py  verify_structure.sh
.devcontainer/: devcontainer.json
PortMaster/: 7zzs.aarch64  7zzs.armhf  7zzs.x86_64  PortMaster.sh  STRUCTURE.md  batocera  control.txt  device_info.txt  exlibs  funcs.txt  gptokeyb  gptokeyb.armhf  gptokeyb.x86_64  gptokeyb2  gptokeyb2.armhf  gptokeyb2.x86_64  harbourmaster  innoextract.aarch64  innoextract.armhf  innoextract.x86_64  knulli  libgl_Batocera.txt  libgl_EmuELEC.txt  libgl_JELOS.txt  libgl_Miyoo.txt  libgl_REGLinux.txt  libgl_ROCKNIX.txt  libgl_UnofficialOS.txt  libgl_default.txt  libgl_knulli.txt  libgl_muOS.txt  libgl_uConsole.txt  miyoo  mod_.txt  mod_Batocera.txt  mod_EmuELEC.txt  mod_JELOS.txt  mod_Miyoo.txt  mod_REGLinux.txt  mod_ROCKNIX.txt  (+17 more)
PortMaster/pylibs/: pugscene.py
PortMaster/pylibs/harbourmaster/: config.py  harbour.py  hardware.py  platform.py
portmaster/: __init__.py  main.py
running_docker/: Dockerfile
tests/: README.md  __init__.py  test_batocera_shgenerator.py  test_config.py  test_harbourmaster_captain.py  test_harbourmaster_hardware.py  test_harbourmaster_info.py  test_harbourmaster_init.py  test_harbourmaster_util.py  test_knulli_shgenerator.py  test_mapper.py  test_pugscene.py  test_pugtheme.py  test_pySDL2gui.py  test_util.py  test_utility.py
tests/harbourmaster/: __init__.py  test_harbour_load_ports.py
tools/: download_runtimes.sh  installer.sh
