[tool.poetry]
name = "portmaster"
version = "2023.01.07"
description = "PortMaster GUI for managing game ports on handheld Linux devices"
authors = ["PortMaster Team"]
readme = "README.md"
packages = [{include = "PortMaster"}]

[tool.poetry.dependencies]
python = "^3.9"
certifi = "2020.11.08"
charset-normalizer = "3.0.1"
colorama = "0.4.6"
idna = "3.4"
loguru = "0.7.0"
urllib3 = "1.26.14"
requests = "2.28.2"
ansimarkup = "1.5.0"
fastjsonschema = "2.18.0"
qrcode = "7.4.2"
PySDL2 = "0.9.15"
pysdl2-dll = "2.32.0"
pypng = "0.20220715.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
