[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portmaster-gui"
version = "2023.01.07.1007"
description = "PortMaster - GUI for managing game ports on handheld devices"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "PortMaster Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "certifi==2020.11.08",
    "charset-normalizer==3.0.1",
    "colorama==0.4.6",
    "idna==3.4",
    "loguru==0.7.0",
    "urllib3==1.26.14",
    "requests==2.28.2",
    "ansimarkup==1.5.0",
    "fastjsonschema==2.18.0",
    "qrcode==7.4.2",
    "PySDL2==0.9.15",
    "pysdl2-dll==2.32.0",
    "pypng==0.20220715.0",
    "python-gettext==5.0"
]

[project.optional-dependencies]
dev = [
    "coverage>=7.0.0",
]

[project.scripts]
portmaster-gui = "portmaster.main:main"
portmaster-release = "portmaster.build.release:main"
portmaster-i18n = "portmaster.build.i18n:main"
portmaster-installer = "portmaster.build.installer:main"
portmaster-runtimes = "portmaster.build.runtimes:main"

[tool.setuptools]
packages = ["portmaster", "portmaster.build"]
include-package-data = true

[tool.setuptools.package-data]
portmaster = ["PortMaster/**/*"]

[project.urls]
Homepage = "https://github.com/PortsMaster/PortMaster-GUI"
Documentation = "https://portmaster.games"
Repository = "https://github.com/PortsMaster/PortMaster-GUI"
Issues = "https://github.com/PortsMaster/PortMaster-GUI/issues"
